@@ -107,6 +107,6 @@ namespace Orthanc
     static bool SaveToMemoryBuffer(std::string& buffer,
                                    DcmDataset& dataSet);
 
-    static bool IsPNValueRepresentation(const DicomTag& tag);
+    static ValueRepresentation GetValueRepresentation(const DicomTag& tag);
   };
 }
